# structs/requests/addCustomerRequestDTO.go
@@ -1,16 +1,33 @@
 package requests
 
 type AddCustomerRequestDTO struct {
-	Name                string
-	Category            string
-	PhoneNumber         string
-	ShopName            string
-	Nickname            string
-	ShopAssistantName   string
-	ShopAssistantNumber string
+	Name        string
+	Category    string
+	PhoneNumber string
+	// ShopName            string
+	IdType   string
+	IdNumber string
+	Nickname string
+	// ShopAssistantName   string
+	// ShopAssistantNumber string
 	// Password string
 	Email   string
-	Gender  string
+	Dob     string
+	AddedBy string
+}
+
+type UpdateCustomerRequestDTO struct {
+	Name        string
+	Category    string
+	PhoneNumber string
+	IdType      string
+	IdNumber    string
+	// ShopName            string
+	Nickname string
+	// ShopAssistantName   string
+	// ShopAssistantNumber string
+	// Password string
+	Email   string
 	Dob     string
 	AddedBy string
 }
